--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,7 +8,8 @@
                     <img src="{{ asset('img/' ~ category.picture) }}" style="height: 400px" class="img img-fluid card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ category.name }}</h5>
-                        <a href="{{ path('pizzas', {id: category.id}) }}" class="btn btn-primary">Go somewhere</a>
+                        <a href="{{ path('pizzas', {id: category.id}) }}" class="btn btn-primary">verder</a>
+
                     </div>
                 </div>
             </div>
