--- a/templates/pizzas.html.twig
+++ b/templates/pizzas.html.twig
@@ -5,10 +5,16 @@
         {% for pizza in category.pizzas %}
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="card" style="">
-                    <img src="{{ asset('img/' ~ pizza.picture) }}" class="card-img-top" alt="...">
+                    <img src="{{ asset('img/' ~ pizza.picture) }}"style="height: 400px" class="img img-fluid card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ pizza.name }}</h5>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">bestellen</a>
+                        <select class="border-3px border-danger" name="size" id="">
+                            <option value="0">Small</option>
+                            <option value="1">medium</option>
+                            <option value="2">large</option>
+                            <option value="3">calzone</option>
+                        </select>
                     </div>
                 </div>
             </div>
