--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active " href="{{ path('home') }}">Home </a>
                     <a class="nav-link " href="{{ path('contact') }}">contact </a>
-                    <a class="nav-link  justify-content-end" href="#">inloggen </a>
+                    <a class="nav-link  justify-content-end" href="{{ path('login') }}">inloggen </a>
 
 
                 </div>
