--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <div>
-            <img src="{{ asset('img/pizza-day-1.jpg') }}" style="height: 200px; width: 1920px">
+            <img class="img-fluid" src="{{ asset('img/pizza-day-1.jpg') }}" style="height: 200px; width: 1920px">
         </div>
     {% block body %}{% endblock %}
     </body>
