--- a/templates/pizzas.html.twig
+++ b/templates/pizzas.html.twig
@@ -9,12 +9,12 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ pizza.name }}</h5>
                         <a href="{{ path('form',{id:pizza.id}) }}" class="btn btn-primary">bestellen</a>
-                        <select class="border-3px border-danger" name="size" id="">
-                            <option value="0">Small</option>
-                            <option value="1">medium</option>
-                            <option value="2">large</option>
-                            <option value="3">calzone</option>
-                        </select>
+{#                        <select class="border-3px border-danger" name="size" id="">#}
+{#                            <option value="0">Small</option>#}
+{#                            <option value="1">medium</option>#}
+{#                            <option value="2">large</option>#}
+{#                            <option value="3">calzone</option>#}
+{#                        </select>#}
                     </div>
                 </div>
             </div>
