--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,8 @@
 {% extends "base.html.twig" %}
 {% block body %}
+    <div class="row">
+        <p><h1 class="m-auto"> WELCOME TO SOPRANOS PIZZA!</h1></p>
+    </div>
     <div class="container-fluid">
         <div class="row mt-5">
         {% for category in category %}
