--- a/templates/bestel.html.twig
+++ b/templates/bestel.html.twig
@@ -1,6 +1,12 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+
+    {% for msg in app.session.flashBag.get('success') %}
+    <div class="alert alert-success">
+        {{ msg }}
+        {% endfor %}
+    </div>
     <div class="col-12 col-sm-4 col-md-4 col-lg-6 justify-content-right mt-5">
         <div class="border border-dark border-2 mb-2 ms-2">
             <p>naam: {{ order.naam }}</p>
